# unity-py

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml  release.yml  unity-py-python-app.yml  unity-py-release.yml
libs/unity-py/: CHANGELOG.md  pyproject.toml
libs/unity-py/docs/: README.md
libs/unity-py/examples/: ogc_notebook.ipynb
libs/unity-py/notebooks/: README.md  ogc_notebook.ipynb
libs/unity-py/tests/: test_unity_py.py
libs/unity-py/tests/test_files/: catalog_corrupt.json  catalog_corrupt_02.json  config_override.cfg
libs/unity-py/unity_sds_client/: unity_session.py
libs/unity-py/unity_sds_client/envs/: environments.cfg
libs/unity-py/unity_sds_client/resources/: dataset.py  job.py  job_status.py  process.py
libs/unity-py/unity_sds_client/services/: data_service.py  process_service.py
notebooks/: README.md  mercury-dashboard.ipynb
tests/: test_unity_data_service.py  test_unity_health_service.py  test_unity_py.py  test_unity_stac.py
tests/test_files/: SNDR.SS1330.CHIRP.20160829T2317.m06.g233.L1_AQ.std.v02_48.G.200425130422.json  catalog.json  catalog_01.json  cmr_granules.json  dataset_with_properties.json
unity_py/: __init__.py  data_manager.py  data_service.py  unity.cfg  unity.py  unity.test.cfg  unity_environments.py  unity_services.py  unity_session.py
unity_py/envs/: unity.test.cfg
unity_py/resources/: collection.py  data_file.py  dataset.py  job.py  job_status.py  process.py
unity_py/services/: application_service.py  data_service.py  job_service.py  process_service.py
unity_py/utils/: http.py
unity_sds_client/: unity.py  unity_exception.py  unity_services.py  unity_session.py
unity_sds_client/envs/: environments.cfg  unity.test.cfg
unity_sds_client/resources/: collection.py  data_file.py  dataset.py  job.py  process.py
unity_sds_client/services/: application_service.py  data_service.py  health_service.py  process_service.py
