[tool.poetry]
name = "unity-py"
version = "0.1.0"
description = "Unity-Py is a Python client to simplify interactions with NASA's Unity Platform."
authors = ["Anil Natha, Mike Gangl"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/unity-sds/unity-py"
exclude = ['img', 'tests']
packages = [
    { include = "unity_py" },
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.0"
tenacity = "^8.0.1"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
pytest-mock = "^3.8.2"


[tool.pytest.ini_options]
markers = [
    "regression: marks a test as a regression, requires netrc file (deselect with '-m \"not regresion\"')"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
