[tool.poetry]
name = "unity-sds-client"
version = "0.5.0a3"
description = "Unity-Py is a Python client to simplify interactions with NASA's Unity Platform."
authors = ["Anil Natha, Mike Gangl"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/unity-sds/unity-py"
exclude = ['img', 'tests']
packages = [
    { include = "unity_sds_client" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"
tenacity = "^8.0.1"
giturlparse = "^0.10.0"
pystac = "^1.7.3"
unity-sps-ogc-processes-api-python-client = { git = "https://github.com/unity-sds/unity-sps-ogc-processes-api-client-python.git", tag = "2.0.2-beta.0" } 
#unity-sps-ogc-processes-api-python-client = {path = "../unity-sps-ogc-processes-api-client-python", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
pytest-mock = "^3.8.2"
coverage = "^7.3.1"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
markers = [
    "regression: marks a test as a regression, requires netrc file (deselect with '-m \"not regresion\"')"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
